maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:27: error: not found: value getPosition
  while (getPosition() != Position.NORTH) { // auto-orientation
         ^IslandMaze:27: error: not found: value Position
  while (getPosition() != Position.NORTH) { // auto-orientation
                          ^IslandMaze:41: error: value leftFollowerMode is not a member of Unit
possible cause: maybe a semicolon is missing before `value leftFollowerMode'?
              } leftFollowerMode(); state = 0;
                ^